2.0 ~ remove duplicate form input text selectable ~ fix flicker android

--- a/css/index.css
+++ b/css/index.css
@@ -32,9 +32,10 @@ body.blackberry,
 body.playbook,
 body.wekbit,
 body.osx								{ -webkit-user-select: none !important; user-select: none !important; -webkit-user-callout: none !important; -webkit-touch-callout: none !important; }
+/*allow input text select ~ flicker*/
 input, select, textarea,
 input[type='number'],
-input[type='text']						{ -webkit-user-select: text !important; user-select: text !important; -webkit-user-callout: default !important; -webkit-touch-callout: default !important; -webkit-box-shadow: none; -webkit-appearance: none; -webkit-tap-highlight-color: rgba(0,0,0,0); outline: 0; padding: 0; margin: 0; text-indent: 0; border: 0; border-radius: 0; background-color: rgba(255,255,255,0); color: #000; }
+input[type='text']						{ -webkit-user-select: text !important; user-select: text !important; -webkit-user-callout: default !important; -webkit-touch-callout: default !important; -webkit-box-shadow: none; -webkit-appearance: none; -webkit-tap-highlight-color: rgba(0,0,0,0); outline: 0; padding: 0; margin: 0; text-indent: 0; border: 0; border-radius: 0; background-image: none; background-color: rgba(255,255,255,0); color: #000; -webkit-transform-style: preserve-3d; -webkit-backface-visibility: hidden; }
 body.moz input,
 body.moz select,
 body.moz textarea						{ background-color: rgba(0,0,0,0); background-image: -webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)); }
@@ -82,10 +83,6 @@ p										{ margin: 0; padding: 0; -webkit-margin-before: 0; -webkit-margin-aft
 /*
 @media (max-width: 600px)				{ @-ms-viewport { width: 80%; }}
 */
-/*///////////////////////////
-// preserve text selection //
-///////////////////////////*/
-input, textarea						{ -webkit-user-select: text !important; -webkit-user-callout: default !important; -webkit-touch-callout: default !important; }
 /*#/////////////#//
 //# APP CONTENT #//
 //#/////////////#*/
